--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <div class="sidebar-header">
         <h3>Collapsible Sidebar</h3>
         <button type="button" class="btn btn-secondary" (click)="toggleSidebar()">
-            <i class="fa fa-bars"><></i>
+            <i class="fa fa-bars"><3</i>
         </button>
     </div>
     <ul class="list-unstyled components">
